tdf#147526 a macro case which results in a null Lower() result

while deleting a table

Change-Id: I5e80a654e668fbcd7086a904bbed853eacbfc08a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151283
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>